<resources>
    <string name="app_name">Who Get Ten First</string>
    <string name="team_a_name">Team A</string>
    <string name="team_a_score">5</string>
    <string name="team_b_name">Team B</string>
    <string name="team_b_score">5</string>
    <string name="plus_one">+1</string>
    <string name="plus_two">+2</string>
    <string name="plus_three">+3</string>
    <string name="plus_four">+4</string>
    <string name="plus_five">+5</string>
    <string name="plus_six">+6</string>
    <string name="reset">重置</string>
</resources>
