<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.whogettenfirst.MainActivity">

    <Button
        android:id="@+id/reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="36dp"
        android:layout_centerHorizontal="true"
        android:text="@string/reset"
        android:onClick="resetGame"/>

    <TextView
        android:id="@+id/system_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:layout_above="@id/reset"
        android:layout_centerInParent="true"
        android:text=""
        android:textSize="40sp"
        android:fontFamily="sans-serif-condensed"
        />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/team_a_name"
                android:gravity="center_horizontal"
                android:textSize="14sp"
                android:fontFamily="sans-serif-meduim"/>

            <TextView
                android:id="@+id/score_of_team_a"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/team_a_score"
                android:gravity="center_horizontal"
                android:textSize="56sp"
                android:textColor="#000000"
                android:fontFamily="sans-serif-medium"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:text="@string/plus_one"
                android:onClick="addOneToTeamA"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:text="@string/plus_two"
                android:onClick="addTwoToTeamA"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:text="@string/plus_three"
                android:onClick="addThreeToTeamA"/>

        </LinearLayout>

        <TextView
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@android:color/darker_gray"
            android:layout_marginTop="32dp"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/team_b_name"
                android:textSize="14sp"
                android:textColor="#616161"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"/>

            <TextView
                android:id="@+id/score_of_team_b"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/team_b_score"
                android:gravity="center_horizontal"
                android:textSize="56sp"
                android:textColor="#000000"
                android:fontFamily="sans-serif-medium"/>


            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:text="@string/plus_one"
                android:onClick="addOneToTeamB"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:text="@string/plus_two"
                android:onClick="addTwoToTeamB"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:text="@string/plus_three"
                android:onClick="addThreeToTeamB"/>

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
